<resources>
    <string name="app_name">MyAppABoscan</string>
    <string name="Password" />
    <string name="Email" />
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="log_in">Log In</string>
    <string name="new_acount">New Acount</string>
    <string name="todo">TODO</string>
    <string name="form_login">Form LogIn</string>
    <string name="second_name">Second Name</string>
    <string name="first_name">First Name</string>
    <string name="Email2">Email</string>
    <string name="age">Age</string>
    <string name="todo2">TODO</string>
    <string name="textview">TextView</string>
    <string name="textview1">TextView</string>
</resources>