<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormActivity"
    android:background="@drawable/gradient_list">

    <android.support.constraint.ConstraintLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="93dp"
            android:layout_height="80dp"
            android:layout_marginTop="36dp"
            android:contentDescription="@string/todo2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.474"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/cuenta" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/form_login"
            android:textAlignment="center"
            android:textIsSelectable="false"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.472"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="359dp"
            android:layout_height="358dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="34dp"
            android:layout_marginBottom="175dp"
            android:background="#FFFFFF"
            android:backgroundTint="#FFFFFF"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_bias="0.45">

            <EditText
                android:id="@+id/editTextTextPersonName12"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:layout_marginStart="9dp"
                android:layout_marginTop="23dp"
                android:layout_marginEnd="10dp"
                android:autofillHints=""
                android:backgroundTint="#000000"
                android:ems="10"
                android:hint="@string/Email2"
                android:inputType="textPersonName"
                android:textColor="#000000"
                android:textColorHint="@color/black"
                android:textColorLink="#000000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.7"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName11"
                tools:ignore="TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/editTextNumber"
                android:layout_width="141dp"
                android:layout_height="43dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="29dp"
                android:layout_marginEnd="160dp"
                android:layout_marginBottom="103dp"
                android:autofillHints=""
                android:backgroundTint="#000000"
                android:ems="10"
                android:hint="@string/age"
                android:inputType="number"
                android:textColorHint="#000000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName12"
                app:layout_constraintVertical_bias="0.7"
                tools:ignore="TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/editTextTextPersonName11"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:layout_marginStart="9dp"
                android:layout_marginTop="23dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="23dp"
                android:autofillHints=""
                android:backgroundTint="#000000"
                android:ems="10"
                android:hint="@string/second_name"
                android:inputType="textPersonName"
                android:textColor="#000000"
                android:textColorHint="@color/black"
                android:textColorLink="#000000"
                app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName12"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName8"
                tools:ignore="TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/editTextTextPersonName8"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:layout_marginStart="9dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp"
                android:autofillHints=""
                android:backgroundTint="#000000"
                android:ems="10"
                android:hint="@string/first_name"
                android:inputType="textPersonName"
                android:textColor="#000000"
                android:textColorHint="@color/black"
                android:textColorLink="#000000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TouchTargetSizeCheck" />

            <Spinner
                android:id="@+id/spinner1"
                android:layout_width="143dp"
                android:layout_height="43dp"
                android:layout_marginTop="75dp"
                android:layout_marginEnd="60dp"
                android:layout_marginBottom="37dp"
                android:background="#FFFFFF"
                android:backgroundTint="#00FFFFFF"
                android:dropDownSelector="@color/teal_200"
                android:foregroundTint="#FFFFFF"
                android:textColor="#FFFFFF"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName12"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="135dp"
                android:layout_height="43dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="41dp"
                android:background="@drawable/buttom"
                android:hint="Type of User"
                android:textColor="#000000"
                android:textColorHint="#000000"
                android:textSize="19sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/spinner1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextNumber"
                app:layout_constraintVertical_bias="0.0" />

        </android.support.constraint.ConstraintLayout>

        <LinearLayout
            android:layout_width="389dp"
            android:layout_height="94dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="21dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="60dp"
            android:orientation="horizontal"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
            app:layout_constraintVertical_bias="1.0">

            <Button
                android:id="@+id/button6"
                android:layout_width="180dp"
                android:layout_height="60dp"
                android:layout_marginRight="6dp"
                android:background="@drawable/button_press"
                android:hint="Back"
                android:onClick="goBack" />

            <Button
                android:id="@+id/button7"
                android:layout_width="180dp"
                android:layout_height="60dp"
                android:layout_marginLeft="6dp"
                android:background="@drawable/button_press"
                android:hint="Complete"
                android:onClick="completeActivity" />
        </LinearLayout>

    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>